Fix reader layout height on mobile using dvh and increase footer margin

--- a/OEBPS/clarke.css
+++ b/OEBPS/clarke.css
@@ -2295,7 +2295,7 @@ html.dark-theme hr {
     margin-top: 4rem;
     padding-top: 2rem;
     border-top: 1px solid #cbd5e1;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
 }
 
 .nav-link-prev, .nav-link-next {
